--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,13 +2,13 @@ version: 2
 jobs:
   build:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/ruby:2.4-node-jessie
     steps:
       - checkout
       - run: <command>
   backend_test:
     docker:
-      - image: circleci/ruby:2.4.1
+      - image: circleci/ruby:2.4-node-jessie
     steps:
       - checkout
       - run: rake
