--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,26 +1,45 @@
-version: 2.0
-defaults: &defaults
-  working_directory: ~/business-period
-  docker:
-    - image: circleci/ruby:2.4.2-jessie-node-browsers
-
+version: 2
 jobs:
-  backend-tests:
-    <<: *defaults
+  build:
+    docker:
+       - image: circleci/ruby:2.4.1-node-browsers
+
+    working_directory: ~/business-period
+
     steps:
       - checkout
-      - run: 
-          name: Setup dependencies
-          command: |
-            bundle install --without production --path=${BUNDLE_PATH:-vendor/bundle}
-      - run: 
-          name: Run backend tests
-          command: |
-            bundle exec rake
 
-workflows:
-  version: 2
+      - restore_cache:
+          keys:
+          - v1-dependencies-{{ checksum "Gemfile.lock" }}
+          - v1-dependencies-
 
-  commit:
-    jobs:
-      - backend-tests
+      - run:
+          name: install dependencies
+          command: |
+            bundle install --jobs=4 --retry=3 --path vendor/bundle
+
+      - save_cache:
+          paths:
+            - ./vendor/bundle
+          key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+        
+      # run tests!
+      - run:
+          name: run tests
+          command: |
+            mkdir /tmp/test-results
+            TEST_FILES="$(circleci tests glob "spec/**/*_spec.rb" | circleci tests split --split-by=timings)"
+            
+            bundle exec rspec --format progress \
+                            --format RspecJunitFormatter \
+                            --out /tmp/test-results/rspec.xml \
+                            --format progress \
+                            $TEST_FILES
+
+      # collect reports
+      - store_test_results:
+          path: /tmp/test-results
+      - store_artifacts:
+          path: /tmp/test-results
+          destination: test-results
