--- a/.codeclimate.yml
+++ b/.codeclimate.yml
@@ -1,5 +1,8 @@
 plugins:
   rubocop:
     enabled: true
+    checks:
+      Rubocop/Style/Documentation:
+        enabled: false
   rubymotion:
     enabled: true
