--- a/config/holidays/et.yml
+++ b/config/holidays/et.yml
@@ -1,30 +1,63 @@
-months:
-  1:
-  - mday: 1
-    name: New Year's Day
-  2:
-  - mday: 24
-    name: Independence Day
-  4:
-  - mday: 19
-    name: Good Friday
-  - mday: 21
-    name: Easter Sunday
-  5:
-  - mday: 1
-    name: Spring Day
-  6:
-  - mday: 23
-    name: Victory Day
-  - mday: 24
-    name: St. John's Day
-  8:
-  - mday: 20
-    name: Independence Restoration Day
-  12:
-  - mday: 24
-    name: Christmas Eve
-  - mday: 25
-    name: Christmas Day
-  - mday: 26
-    name: Boxing Day
+years:
+  2018:
+    months:
+      1:
+      - mday: 1
+        name: New Year's Day
+      2:
+      - mday: 24
+        name: Independence Day
+      4:
+      - mday: 19
+        name: Good Friday
+      - mday: 21
+        name: Easter Sunday
+      5:
+      - mday: 1
+        name: Spring Day
+      6:
+      - mday: 23
+        name: Victory Day
+      - mday: 24
+        name: St. John's Day
+      8:
+      - mday: 20
+        name: Independence Restoration Day
+      12:
+      - mday: 24
+        name: Christmas Eve
+      - mday: 25
+        name: Christmas Day
+      - mday: 26
+        name: Boxing Day
+  2019:
+    months:
+      1:
+      - mday: 1
+        name: New Year's Day
+      2:
+      - mday: 24
+        name: Independence Day
+      4:
+      - mday: 19
+        name: Good Friday
+      - mday: 21
+        name: Easter Sunday
+      5:
+      - mday: 1
+        name: Spring Day
+      6:
+      - mday: 23
+        name: Victory Day
+      - mday: 24
+        name: St. John's Day
+      8:
+      - mday: 20
+        name: Independence Restoration Day
+      12:
+      - mday: 24
+        name: Christmas Eve
+      - mday: 25
+        name: Christmas Day
+      - mday: 26
+        name: Boxing Day
