--- a/config/holidays/lt.yml
+++ b/config/holidays/lt.yml
@@ -1,42 +1,83 @@
-months:
-  1:
-  - mday: 1
-    name: Naujieji metai
-  2:
-  - mday: 16
-    name: Valstybės atkūrimo diena
-  3:
-  - mday: 11
-    name: Nepriklausomybės atkūrimo diena
-  4:
-  - mday: 21
-    name: Velykos
-  - mday: 22
-    name: Velykų antroji diena
-  5:
-  - mday: 1
-    name: Tarptautinė darbo diena
-  - mday: 5
-    name: Motinos diena
-  6:
-  - mday: 2
-    name: Tėvo diena
-  - mday: 24
-    name: Joninės
-  7:
-  - mday: 6
-    name: Karaliaus Mindaugo karūnavimo diena
-  8:
-  - mday: 15
-    name: Žolinė
-  11:
-  - mday: 1
-    name: Visų šventųjų diena
-  12:
-  - mday: 24
-    name: Šv. Kūčios
-  - mday: 25
-    name: Šv. Kalėdos
-  - mday: 26
-    name: Šv. Kalėdų antroji diena
-
+years:
+  2018:
+    months:
+      1:
+      - mday: 1
+        name: Naujieji metai
+      2:
+      - mday: 16
+        name: Valstybės atkūrimo diena
+      3:
+      - mday: 11
+        name: Nepriklausomybės atkūrimo diena
+      4:
+      - mday: 1
+        name: Velykos
+      - mday: 2
+        name: Velykų antroji diena
+      5:
+      - mday: 1
+        name: Tarptautinė darbo diena/ Motinos diena
+      6:
+      - mday: 3
+        name: Tėvo diena
+      - mday: 24
+        name: Joninės
+      7:
+      - mday: 6
+        name: Karaliaus Mindaugo karūnavimo diena
+      8:
+      - mday: 15
+        name: Žolinė
+      11:
+      - mday: 1
+        name: Visų šventųjų diena
+      12:
+      - mday: 24
+        name: Šv. Kūčios
+      - mday: 25
+        name: Šv. Kalėdos
+      - mday: 26
+        name: Šv. Kalėdų antroji diena
+  2019:
+    months:
+      1:
+      - mday: 1
+        name: Naujieji metai
+      2:
+      - mday: 16
+        name: Valstybės atkūrimo diena
+      3:
+      - mday: 11
+        name: Nepriklausomybės atkūrimo diena
+      4:
+      - mday: 21
+        name: Velykos
+      - mday: 22
+        name: Velykų antroji diena
+      5:
+      - mday: 1
+        name: Tarptautinė darbo diena
+      - mday: 5
+        name: Motinos diena
+      6:
+      - mday: 2
+        name: Tėvo diena
+      - mday: 24
+        name: Joninės
+      7:
+      - mday: 6
+        name: Karaliaus Mindaugo karūnavimo diena
+      8:
+      - mday: 15
+        name: Žolinė
+      11:
+      - mday: 1
+        name: Visų šventųjų diena
+      12:
+      - mday: 24
+        name: Šv. Kūčios
+      - mday: 25
+        name: Šv. Kalėdos
+      - mday: 26
+        name: Šv. Kalėdų antroji diena
